// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput closes suggestion drop 1`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="text-input-drop__item"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-bNrBob bCeRym"
  >
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput closes suggestion drop 2`] = `
"@media only screen and (max-width:699px) {
  .elZJsV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .elZJsV {
    padding: 4px;
  }
}

@media only screen and (min-width:700px) {
  .djbfBD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput closes suggestion drop 3`] = `
<div
  class="StyledGrommet-gGRXwz deqpVW"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
  >
    <input
      class="StyledTextInput-bzOzsW zdvFG"
      id="item"
      autocomplete="off"
      name="item"
    />
  </div>
</div>
`;

exports[`TextInput handles next and previous without suggestion 1`] = `
<div
  class="StyledGrommet-gGRXwz deqpVW"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
  >
    <input
      class="StyledTextInput-bzOzsW zdvFG"
      id="item"
      autocomplete="off"
      name="item"
    />
  </div>
</div>
`;

exports[`TextInput mounts 1`] = `
<div
  class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
>
  <input
    class="StyledTextInput-bzOzsW zdvFG"
    autocomplete="off"
    name="item"
  />
</div>
`;

exports[`TextInput mounts with complex suggestions 1`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="text-input-drop__item"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-bNrBob bCeRym"
  >
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput mounts with complex suggestions 2`] = `
"@media only screen and (max-width:699px) {
  .elZJsV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .elZJsV {
    padding: 4px;
  }
}

@media only screen and (min-width:700px) {
  .djbfBD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput mounts with suggestions 1`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="text-input-drop__item"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-bNrBob bCeRym"
  >
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput mounts with suggestions 2`] = `
"@media only screen and (max-width:699px) {
  .elZJsV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .elZJsV {
    padding: 4px;
  }
}

@media only screen and (min-width:700px) {
  .djbfBD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput selects suggestion 1`] = `
<div
  class="StyledDrop-bCWxPe gcEofR"
  tabindex="-1"
  id="text-input-drop__item"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-bNrBob bCeRym"
  >
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-gXzblK djbfBD"
        type="button"
      >
        <div
          class="StyledBox-bStriS elZJsV"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput selects suggestion 2`] = `
"@media only screen and (max-width:699px) {
  .elZJsV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .elZJsV {
    padding: 4px;
  }
}

@media only screen and (min-width:700px) {
  .djbfBD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.gcEofR {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput selects suggestion 3`] = `
<div
  class="StyledGrommet-gGRXwz deqpVW"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
  >
    <input
      class="StyledTextInput-bzOzsW gAbvjB"
      id="item"
      autocomplete="off"
      name="item"
    />
  </div>
</div>
`;
